--- a/src/site/notes/Обо мне.md
+++ b/src/site/notes/Обо мне.md
@@ -1,48 +1,45 @@
 ---
-{"dg-publish":true,"dg-path":"about-me","permalink":"/about-me/","pinned":true,"tags":["gardenEntry"]}
+{"dg-publish":true,"permalink":"/obo-mne/","pinned":true,"tags":["gardenEntry"]}
 ---
 
+![andrey photo circle 1.png|200](/img/user/Images/andrey%20photo%20circle%201.png)
 # Обо мне
 
-![[andrey photo circle 1png|]
-
-~~~~ 
+```
 Меня зовут Андрей Сычёв, рад вас видеть на своем персональном сайте!
 Если сказать о себе одним словом, то я — исследователь
-~~~~ 
+```
+
 Согласно глобальному тренду, не ограничиваюсь одной профессией, две моих основных ветки:  
-— Маркетинговые и социальные исследования, 
+— Маркетинговые и социальные исследования,  
 — Психологические путешествия с использованием метода ландшафтная аналитика
-
-
 
 **==Коротко про ИССЛЕДОВАНИЯ==**
 
 Более 25-ти лет проработал в ведущих международных и российских исследовательских агентствах GfK, Nielsen, Tiburon Research Все это время совмещал в себе две роли – исследователя и специалиста по развитию бизнеса
 
-Последние  пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:  
-- Развивал навыки использования AI в исследованиях в  [AI LAB](https://ai-labtech) у Дмитрия Соловьева 
-- Учился созданию и использованию AI-инструментов для управления знаниями в  [AI Mindset Lab](https://aimindsetorg/)  у Глеба Калинина
-- Участвовал в создании, тестировании и продвижении [инструментов на базе AI ](https://blogfastunaru/insightchat) в компании Tiburon Research 
+Последние пару лет погрузился в тему **применения AI в исследованиях** и смежных областях:
 
-→→ Больше про мой опыт в исследованиях в [[Исследования/Резюме\|резюме]] 
+- Развивал навыки использования AI в исследованиях в [AI LAB](https://ai-labtech/) у Дмитрия Соловьева
+- Учился созданию и использованию AI-инструментов для управления знаниями в [AI Mindset Lab](https://aimindsetorg/) у Глеба Калинина
+- Участвовал в создании, тестировании и продвижении [инструментов на базе AI](https://blogfastunaru/insightchat) в компании Tiburon Research
 
+→→ Больше про мой опыт в исследованиях в [резюме](https://andreysychev.com/issledovaniya/rezyume/)
 
 **==Коротко про ПСИХОЛОГИЧЕСКИЕ ПУТЕШЕСТВИЯ==**
 
-Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики 
+Провожу психологические путешествия в Грузии, России, Израиле, в планах Турция Вместе с моим коллегой психологом Арсением Белорусцем на практике изучаю психологический эффект путешествий и развиваю метод ландшафтной аналитики
 
-Ландшафтная аналитика –  «модерируемое» психологическое путешествие, групповая психотерапия в формате трекинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта
+Ландшафтная аналитика – «модерируемое» психологическое путешествие, групповая психотерапия в формате хайкинга, включающего в себя взаимодействие с объектами природного и культурного ландшафта
 
 Как работает ландшафтная аналитика:
 
 - Ведущие разрабатывают маршрут и подбирают точки на нём – объекты природного и культурного ландшафта,
-- Взаимодействие с ландшафтом рождает инсайты –  природа отражает содержание психики и дает важные подсказки,
+- Взаимодействие с ландшафтом рождает инсайты – природа отражает содержание психики и дает важные подсказки,
 - Движение и физическая нагрузка не менее важны, чем взаимодействие с ландшафтными объектами,
 - Ведущие выступают в роли проводников группы в физическом пространстве и пространстве психики,
 - Участники делятся друг с другом полученным опытом
 
-→→ Больше про психологические путешествия в нашем [телеграм-канале ](https://tme/outsideinsight)
+→→ Больше про психологические путешествия в нашем [телеграм-канале](https://tme/outsideinsight)
 
-МОИ КОНТАКТЫ: [Telegram](https://tme/andreyscyhev), [E-mail ](mailto:sychevonline@gmailcom)
-
+МОИ КОНТАКТЫ: [Telegram](https://t.me/andreysychev), [E-mail](mailto:sychevonline@gmail@com)
